# COMP2

./: .gitignore  CMakeLists.txt  main.c  readme.md  regression.d
definitions/: TODO  definitions.h  gen_reserved.py  makefile  reserved.txt
src/: config.c  config.h  main.c
src/definitions/: TODO  definitions.h  dlang.lex  dlangLexer.exe.stackdump  gen_lex.py  gen_reserved.py  lex.yy.c  reserved.all  reserved.txt
src/flex/simple/: lex.yy.c  simple.flex  simple.tab.c  simple.tab.h  simple.y
src/flex/simple2/: fed.c  lex.yy.c
src/helpers/: logger.c  logger.h  reader.c  reader.h
src/input_system/: input_system.c  input_system.h
src/lexycal_analyzer/: lexycal_analyzer.c  lexycal_analyzer.h
